updates to landing page

--- a/output/deploy/index.html
+++ b/output/deploy/index.html
@@ -14,8 +14,34 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Activities and exercises for easily implementing Team-Based Inquiry Learning in a sophomore linear algebra classroom.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-        <a href="./2022/" class="btn btn-success btn-lg px-4 gap-3">Activity Book</a>
-        <a href="./2022/exercises/" class="btn btn-outline-success btn-lg px-4 gap-3">Exercise Bank</a>
+        <div class="btn-group" role="group">
+          <a href="./2022/" id="btnGroupDrop1" type="button" class="btn btn-success btn-lg">
+            Activity Book
+          </a>
+          <button id="btnGroupDrop1" type="button" class="btn btn-success btn-lg dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+            <span class="visually-hidden">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="btnGroupDrop1">
+            <li><a class="dropdown-item" href="./2022/">2022 Edition: HTML</a></li>
+            <li><a class="dropdown-item" href="./2022/instructor/"><span class="visually-hidden">2022 Edition: </span><span class="ms-3">Instructor HTML</span></a></li>
+            <li><a class="dropdown-item" href="./2022/pdf/main.pdf"><span class="visually-hidden">2022 Edition: </span><span class="ms-3">PDF</span></a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="./legacy/">Legacy Edition</a></li>
+          </ul>
+        </div>
+        <div class="btn-group" role="group">
+          <a href="./2022/exercises/" id="btnGroupDrop1" type="button" class="btn btn-outline-success btn-lg">
+            Exercise Bank
+          </a>
+          <button id="btnGroupDrop1" type="button" class="btn btn-outline-success btn-lg dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+            <span class="visually-hidden">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="btnGroupDrop1">
+            <li><a class="dropdown-item" href="./2022/exercises/">2022 Edition</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="https://teambasedinquirylearning.github.io/checkit-tbil-la/">Legacy Edition</a></li>
+          </ul>
+        </div>
         <a href="https://sites.google.com/southalabama.edu/tbil/" class="btn btn-outline-secondary btn-lg px-4">Learn about TBIL</a>
       </div>
       <div class="overflow-hidden">
@@ -30,14 +56,14 @@
     </div>
     <div class="mt-4">
       <p>
-        <a class="link-success" href="./2022/instructor/">Instructor Version</a> |
-        <a class="link-success" href="./2022/pdf/main.pdf">Activities PDF</a> |
-        <a class="link-success" href="./legacy/">Legacy Edition</a> |
-        <a class="link-success" href="https://github.com/TeamBasedInquiryLearning/linear-algebra">Source on GitHub</a>
+        Supported by <a class="link-success" href="https://nsf.gov/awardsearch/showAward?AWD_ID=2011807">NSF DUE #2011807</a> |
+        Free and Open Source on <a class="link-success" href="https://github.com/TeamBasedInquiryLearning/linear-algebra">GitHub</a>
+        (<a class="link-success" href="https://github.com/TeamBasedInquiryLearning/linear-algebra/blob/main/license.txt">License</a>)
       </p>
     </div>
   </div>
 </main>
-  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 
 </body></html>
