fix landing cover image attributes

--- a/output/deploy/index.html
+++ b/output/deploy/index.html
@@ -48,9 +48,9 @@
         <div class="container px-5">
           <img
             src="./cover.svg"
-            class="img-fluid border rounded-3 shadow-sm mb-4"
-            alt="Topologist's sine curve y=sin(1/x)"
-            width="560" height="420" loading="lazy">
+            class="border rounded-3 shadow-sm mb-4"
+            alt="Illustration of the geometry of a linear transformation."
+            height="300" loading="lazy">
         </div>
       </div>
     </div>
