--- a/index.html
+++ b/index.html
@@ -48,16 +48,17 @@
         <div class="container px-5">
           <img
             src="./cover.svg"
-            class="border rounded-3 shadow-sm mb-4"
+            class="img-fluid border rounded-3 shadow-sm mb-4"
             alt="Illustration of the geometry of a linear transformation."
-            height="300" loading="lazy">
+            style="max-height: 300px" loading="lazy">
         </div>
       </div>
     </div>
     <div class="mt-4">
       <p>
         Supported by <a class="link-success" href="https://nsf.gov/awardsearch/showAward?AWD_ID=2011807">NSF DUE #2011807</a> |
-        Free and Open Source on <a class="link-success" href="https://github.com/TeamBasedInquiryLearning/linear-algebra">GitHub</a>
+        Free and Open Source on <a class="link-success" href="https://github.com/TeamBasedInquiryLearning/linear-algebra">GitHub</a> |
+        Also available for <a href="../calculus">Calculus</a>
       </p>
     </div>
   </div>
