--- a/output/deploy/index.html
+++ b/output/deploy/index.html
@@ -58,7 +58,7 @@
       <p>
         Supported by <a class="link-success" href="https://nsf.gov/awardsearch/showAward?AWD_ID=2011807">NSF DUE #2011807</a> |
         Free and Open Source on <a class="link-success" href="https://github.com/TeamBasedInquiryLearning/linear-algebra">GitHub</a> |
-        Also available for <a href="../calculus">Calculus</a>
+        Also available for <a class="link-primary" href="../calculus">Calculus</a>
       </p>
     </div>
   </div>
