remove instructor edition link

--- a/output/deploy/index.html
+++ b/output/deploy/index.html
@@ -23,7 +23,7 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="btnGroupDrop1">
             <li><a class="dropdown-item" href="./2022/">2022 Edition: HTML</a></li>
-            <li><a class="dropdown-item" href="./2022/instructor/"><span class="visually-hidden">2022 Edition: </span><span class="ms-3">Instructor HTML</span></a></li>
+            <!-- <li><a class="dropdown-item" href="./2022/instructor/"><span class="visually-hidden">2022 Edition: </span><span class="ms-3">Instructor HTML</span></a></li> -->
             <li><a class="dropdown-item" href="./2022/pdf/main.pdf"><span class="visually-hidden">2022 Edition: </span><span class="ms-3">PDF</span></a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="./legacy/">Legacy Edition</a></li>
