--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <!-- <li><a class="dropdown-item" href="./2022/instructor/"><span class="visually-hidden">2022 Edition: </span><span class="ms-3">Instructor HTML</span></a></li> -->
             <li><a class="dropdown-item" href="./2023e/pdf/main.pdf"><span class="visually-hidden">2023 Early Edition: </span><span class="ms-3">PDF</span></a></li>
             <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="./2023e/">2023 Edition (Preview)</a></li>
             <li><a class="dropdown-item" href="./2022/">2022 Edition</a></li>
             <li><a class="dropdown-item" href="./legacy/">Legacy Edition</a></li>
           </ul>
@@ -40,6 +41,7 @@
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="btnGroupDrop1">
             <li><a class="dropdown-item" href="./2023e/exercises/">2023 Early Edition</a></li>
             <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="./2023/exercises/">2023 Edition (Preview)</a></li>
             <li><a class="dropdown-item" href="./2022/exercises/">2022 Edition</a></li>
             <li><a class="dropdown-item" href="https://teambasedinquirylearning.github.io/checkit-tbil-la/">Legacy Edition</a></li>
           </ul>
