update landing page

--- a/site/index.html
+++ b/site/index.html
@@ -15,33 +15,32 @@
       <p class="lead mb-4">Activities and exercises for easily implementing Team-Based Inquiry Learning in a sophomore linear algebra classroom.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
         <div class="btn-group" role="group">
-          <a href="./2023e/" id="btnGroupDrop1" type="button" class="btn btn-success btn-lg">
+          <a href="./2023/" id="btnGroupDrop1" type="button" class="btn btn-success btn-lg">
             Activity Book
           </a>
           <button id="btnGroupDrop1" type="button" class="btn btn-success btn-lg dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="visually-hidden">Toggle Dropdown</span>
           </button>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="btnGroupDrop1">
-            <li><a class="dropdown-item" href="./2023e/">2023 Early Edition: HTML</a></li>
-            <!-- <li><a class="dropdown-item" href="./2022/instructor/"><span class="visually-hidden">2022 Edition: </span><span class="ms-3">Instructor HTML</span></a></li> -->
-            <li><a class="dropdown-item" href="./2023e/pdf/main.pdf"><span class="visually-hidden">2023 Early Edition: </span><span class="ms-3">PDF</span></a></li>
+            <li><a class="dropdown-item" href="./2023/">2023 Edition: HTML</a></li>
+            <li><a class="dropdown-item" href="./2023/pdf/main.pdf"><span class="visually-hidden">2023 Edition: </span><span class="ms-3">PDF</span></a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="./2023/">2023 Edition (Preview)</a></li>
+            <li><a class="dropdown-item" href="./2023e/">2023 Early Edition</a></li>
             <li><a class="dropdown-item" href="./2022/">2022 Edition</a></li>
             <li><a class="dropdown-item" href="./legacy/">Legacy Edition</a></li>
           </ul>
         </div>
         <div class="btn-group" role="group">
-          <a href="./2023e/exercises/" id="btnGroupDrop1" type="button" class="btn btn-outline-success btn-lg">
+          <a href="./2023/exercises/" id="btnGroupDrop1" type="button" class="btn btn-outline-success btn-lg">
             Exercise Bank
           </a>
           <button id="btnGroupDrop1" type="button" class="btn btn-outline-success btn-lg dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="visually-hidden">Toggle Dropdown</span>
           </button>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="btnGroupDrop1">
-            <li><a class="dropdown-item" href="./2023e/exercises/">2023 Early Edition</a></li>
+            <li><a class="dropdown-item" href="./2023/exercises/">2023 Edition</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="./2023/exercises/">2023 Edition (Preview)</a></li>
+            <li><a class="dropdown-item" href="./2023e/exercises/">2023 Early Edition</a></li>
             <li><a class="dropdown-item" href="./2022/exercises/">2022 Edition</a></li>
             <li><a class="dropdown-item" href="https://teambasedinquirylearning.github.io/checkit-tbil-la/">Legacy Edition</a></li>
           </ul>
