add classes and change textbook->activity book

--- a/site/index.html
+++ b/site/index.html
@@ -64,7 +64,7 @@
         Also available for <a class="link-primary" href="http://calculus.tbil.org">Calculus</a>
       </p>
       <p>
-        Textbook available in <a href="https://aimath.org/aimnews/braille_full/">braille</a> upon <a href="mailto:sclontz@southalabama.edu">request</a>
+        Activity book available in <a class="link-success" href="https://aimath.org/aimnews/braille_full/">braille</a> upon <a class="link-success" href="mailto:sclontz@southalabama.edu">request</a>
       </p>
     </div>
   </div>
