add braille blurb to landing (#331)
* add braille blurb to landing

* add classes and change textbook->activity book

--- a/site/index.html
+++ b/site/index.html
@@ -63,6 +63,9 @@
         Free and Open Source on <a class="link-success" href="https://github.com/TeamBasedInquiryLearning/linear-algebra">GitHub</a> |
         Also available for <a class="link-primary" href="http://calculus.tbil.org">Calculus</a>
       </p>
+      <p>
+        Activity book available in <a class="link-success" href="https://aimath.org/aimnews/braille_full/">braille</a> upon <a class="link-success" href="mailto:sclontz@southalabama.edu">request</a>
+      </p>
     </div>
   </div>
 </main>
