--- a/site/index.html
+++ b/site/index.html
@@ -10,9 +10,10 @@
     
 <main>
   <div class="px-4 py-5 text-center">
-    <h1 class="display-5 fw-bold">Linear Algebra for Team-Based Inquiry Learning</h1>
+    <h1 class="display-5 fw-bold">PRE-2024 ARCHIVE: Linear Algebra for Team-Based Inquiry Learning</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Activities and exercises for easily implementing Team-Based Inquiry Learning in a sophomore linear algebra classroom.</p>
+      <p class="lead mb-4">This project is now available at <a href="https://tbil.org/library">TBIL.org/library</a></p>
+      <hr>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
         <div class="btn-group" role="group">
           <a href="./2024e/" id="btnGroupDrop1" type="button" class="btn btn-success btn-lg">
